--- a/index.html
+++ b/index.html
@@ -26,33 +26,11 @@
             <span></span>
             <span></span>
           </button>
-          <nav class="main-nav" id="main-nav" aria-label="Main navigation">
+          <nav class="main-nav" id="main-nav" aria-label="Main navigation" role="navigation">
             <button class="mobile-menu-close" aria-label="Close navigation menu" type="button" id="mobile-menu-close">
               <span>×</span>
             </button>
-            <button type="button" class="nav-link" data-view="view-home">Home</button>
-            <div class="nav-dropdown">
-              <button type="button" class="nav-link nav-dropdown-toggle" aria-expanded="false" aria-haspopup="true">
-                Tools
-                <span class="dropdown-arrow">▼</span>
-              </button>
-              <div class="dropdown-menu">
-                <button type="button" class="dropdown-item" data-route="/age-calculator">Age Calculator</button>
-                <button type="button" class="dropdown-item" data-route="/date-difference-calculator">Date Difference</button>
-                <button type="button" class="dropdown-item" data-route="/mortgage-calculator">Mortgage Calculator</button>
-                <button type="button" class="dropdown-item" data-route="/car-loan-calculator">Car Loan Calculator</button>
-                <button type="button" class="dropdown-item" data-route="/bmi-calculator">BMI Calculator</button>
-                <button type="button" class="dropdown-item" data-route="/gpa-calculator">GPA Calculator</button>
-                <button type="button" class="dropdown-item" data-route="/pregnancy-due-date">Pregnancy Due Date</button>
-                <button type="button" class="dropdown-item" data-route="/compound-interest">Compound Interest</button>
-                <button type="button" class="dropdown-item" data-route="/income-tax-calculator">Income Tax</button>
-                <button type="button" class="dropdown-item" data-route="/currency-converter">Currency Converter</button>
-              </div>
-            </div>
-            <button type="button" class="nav-link" data-view="view-about">About</button>
-            <button type="button" class="nav-link" data-view="view-privacy">Privacy</button>
-            <button type="button" class="nav-link" data-view="view-terms">Terms</button>
-            <button type="button" class="nav-link" data-view="view-contact">Contact</button>
+            <!-- Navigation items will be dynamically generated -->
           </nav>
         </div>
       </header>
