Fix Home re-routing

--- a/index.html
+++ b/index.html
@@ -71,26 +71,26 @@
               <div class="tool-category">
                 <h3 class="category-title">📅 Date & Time</h3>
                 <div class="tools-in-category">
-                  <a href="/age-calculator" class="tool-card" data-route="/age-calculator">
+                  <button type="button" class="tool-card" data-route="/age-calculator">
                     <div class="tool-icon">🎂</div>
                     <h4>Age Calculator</h4>
                     <p>Calculate your exact age in years, months, and days</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/date-difference-calculator" class="tool-card" data-route="/date-difference-calculator">
+                  <button type="button" class="tool-card" data-route="/date-difference-calculator">
                     <div class="tool-icon">📊</div>
                     <h4>Date Difference</h4>
                     <p>Find the difference between any two dates</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/pregnancy-due-date" class="tool-card" data-route="/pregnancy-due-date">
+                  <button type="button" class="tool-card" data-route="/pregnancy-due-date">
                     <div class="tool-icon">👶</div>
                     <h4>Pregnancy Due Date</h4>
                     <p>Estimate your due date and track pregnancy progress</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
                 </div>
               </div>
 
@@ -98,40 +98,40 @@
               <div class="tool-category">
                 <h3 class="category-title">💰 Finance & Loans</h3>
                 <div class="tools-in-category">
-                  <a href="/mortgage-calculator" class="tool-card" data-route="/mortgage-calculator">
+                  <button type="button" class="tool-card" data-route="/mortgage-calculator">
                     <div class="tool-icon">🏠</div>
                     <h4>Mortgage Calculator</h4>
                     <p>Calculate monthly payments and amortization schedule</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/car-loan-calculator" class="tool-card" data-route="/car-loan-calculator">
+                  <button type="button" class="tool-card" data-route="/car-loan-calculator">
                     <div class="tool-icon">🚗</div>
                     <h4>Car Loan Calculator</h4>
                     <p>Estimate your auto loan payments and interest</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/compound-interest" class="tool-card" data-route="/compound-interest">
+                  <button type="button" class="tool-card" data-route="/compound-interest">
                     <div class="tool-icon">📈</div>
                     <h4>Compound Interest</h4>
                     <p>Calculate investment growth with compound interest</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/income-tax-calculator" class="tool-card" data-route="/income-tax-calculator">
+                  <button type="button" class="tool-card" data-route="/income-tax-calculator">
                     <div class="tool-icon">💵</div>
                     <h4>Income Tax Calculator</h4>
                     <p>Estimate your tax liability and effective tax rate</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/currency-converter" class="tool-card" data-route="/currency-converter">
+                  <button type="button" class="tool-card" data-route="/currency-converter">
                     <div class="tool-icon">💱</div>
                     <h4>Currency Converter</h4>
                     <p>Convert between major world currencies with live rates</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
                 </div>
               </div>
 
@@ -139,19 +139,19 @@
               <div class="tool-category">
                 <h3 class="category-title">🏥 Health & Education</h3>
                 <div class="tools-in-category">
-                  <a href="/bmi-calculator" class="tool-card" data-route="/bmi-calculator">
+                  <button type="button" class="tool-card" data-route="/bmi-calculator">
                     <div class="tool-icon">⚖️</div>
                     <h4>BMI Calculator</h4>
                     <p>Calculate your Body Mass Index and weight category</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
 
-                  <a href="/gpa-calculator" class="tool-card" data-route="/gpa-calculator">
+                  <button type="button" class="tool-card" data-route="/gpa-calculator">
                     <div class="tool-icon">🎓</div>
                     <h4>GPA Calculator</h4>
                     <p>Calculate your Grade Point Average from course grades</p>
                     <span class="tool-arrow">→</span>
-                  </a>
+                  </button>
                 </div>
               </div>
             </div>
