refactor layout for upcoming tools

--- a/index.html
+++ b/index.html
@@ -69,148 +69,36 @@
             </div>
           </div>
 
-          <!-- Tools Grid Section -->
+          <!-- Popular Tools Section -->
           <div class="tools-section">
             <div class="section-header">
-              <h2>All Tools</h2>
-              <p>Choose from our collection of free online calculators</p>
+              <h2>Popular Tools</h2>
+              <p>Quick access to our most-used calculators</p>
             </div>
-
-            <div class="tools-grid">
-              <!-- Date & Time Tools -->
-              <div class="tool-category">
-                <h3 class="category-title">📅 Date & Time</h3>
-                <div class="tools-in-category">
-                  <button type="button" class="tool-card" data-route="/age-calculator">
-                    <div class="tool-icon">🎂</div>
-                    <h4>Age Calculator</h4>
-                    <p>Calculate your exact age in years, months, and days</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/date-difference-calculator">
-                    <div class="tool-icon">📊</div>
-                    <h4>Date Difference</h4>
-                    <p>Find the difference between any two dates</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/pregnancy-due-date">
-                    <div class="tool-icon">👶</div>
-                    <h4>Pregnancy Due Date</h4>
-                    <p>Estimate your due date and track pregnancy progress</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-                </div>
-              </div>
-
-              <!-- Financial Tools -->
-              <div class="tool-category">
-                <h3 class="category-title">💰 Finance & Loans</h3>
-                <div class="tools-in-category">
-                  <button type="button" class="tool-card" data-route="/mortgage-calculator">
-                    <div class="tool-icon">🏠</div>
-                    <h4>Mortgage Calculator</h4>
-                    <p>Calculate monthly payments and amortization schedule</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/car-loan-calculator">
-                    <div class="tool-icon">🚗</div>
-                    <h4>Car Loan Calculator</h4>
-                    <p>Estimate your auto loan payments and interest</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/compound-interest">
-                    <div class="tool-icon">📈</div>
-                    <h4>Compound Interest</h4>
-                    <p>Calculate investment growth with compound interest</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/income-tax-calculator">
-                    <div class="tool-icon">💵</div>
-                    <h4>Income Tax Calculator</h4>
-                    <p>Estimate your tax liability and effective tax rate</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/currency-converter">
-                    <div class="tool-icon">💱</div>
-                    <h4>Currency Converter</h4>
-                    <p>Convert between major world currencies with live rates</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-                </div>
-              </div>
-
-              <!-- Health & Education Tools -->
-              <div class="tool-category">
-                <h3 class="category-title">🏥 Health & Education</h3>
-                <div class="tools-in-category">
-                  <button type="button" class="tool-card" data-route="/bmi-calculator">
-                    <div class="tool-icon">⚖️</div>
-                    <h4>BMI Calculator</h4>
-                    <p>Calculate your Body Mass Index and weight category</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-
-                  <button type="button" class="tool-card" data-route="/gpa-calculator">
-                    <div class="tool-icon">🎓</div>
-                    <h4>GPA Calculator</h4>
-                    <p>Calculate your Grade Point Average from course grades</p>
-                    <span class="tool-arrow">→</span>
-                  </button>
-                </div>
-              </div>
+            <div id="popular-tools-container" class="tools-grid">
+              <!-- Popular tools will be dynamically rendered here -->
+            </div>
+            <div style="text-align: center; margin-top: var(--spacing-xl);">
+              <a href="#" class="btn btn-primary" data-route="/tools" style="display: inline-block; text-decoration: none; padding: var(--spacing-md) var(--spacing-xl);">
+                Browse all tools →
+              </a>
             </div>
           </div>
+        </main>
+      </section>
 
-          <!-- HomePage_Responsive_Top -->
-          <ins class="adsbygoogle"
-               style="display:block"
-               data-ad-client="ca-pub-1375559951407210"
-               data-ad-slot="5592740043"
-               data-ad-format="auto"
-               data-full-width-responsive="true"></ins>
-          <script>
-               (adsbygoogle = window.adsbygoogle || []).push({});
-          </script>
-
-          <!-- SEO Content Section -->
-          <section class="content-section">
-            <h2>What is an Age Calculator?</h2>
-            <p>
-              An age calculator is a useful tool that helps you determine your exact age or the age of someone else based on their date of birth. It calculates the precise number of years, months, and days that have passed since the birth date. This tool is particularly helpful for various purposes such as verifying age for legal requirements, planning events, tracking milestones, or simply satisfying curiosity about how old you are down to the exact day.
-            </p>
-            <p>
-              Our age calculator uses accurate date calculations to provide you with a detailed breakdown of your age. Simply enter your date of birth, and the calculator will instantly show you your age in years, months, and days from that date to today. The calculation accounts for leap years and varying month lengths to ensure accuracy.
-            </p>
-
-            <h2>What is a Date Difference Calculator?</h2>
-            <p>
-              A date difference calculator is a practical tool that computes the time span between any two dates. Whether you need to know how many days until a deadline, how long a project has been running, or the duration between two significant events, this calculator provides you with the answer in multiple formats including days, weeks, months, and years.
-            </p>
-            <p>
-              This calculator is invaluable for project planning, event organization, tracking durations, calculating interest periods, or any situation where you need to know the exact time difference between two dates. It handles all the complexities of calendar calculations, including leap years and months with different numbers of days, to give you accurate results.
-            </p>
-
-            <h3>How accurate are these calculators?</h3>
-            <p>
-              Our calculators use precise date arithmetic that accounts for leap years, varying month lengths (28-31 days), and all calendar complexities. The results are accurate to the day, making them suitable for both personal and professional use.
-            </p>
-
-            <h3>Can I calculate age for dates in the future?</h3>
-            <p>
-              The age calculator is designed to calculate age from a date of birth to the current date. If you enter a future date of birth, the calculator will show an error message, as age cannot be calculated for dates that haven't occurred yet.
-            </p>
-
-            <h3>What if the end date is before the start date?</h3>
-            <p>
-              For the date difference calculator, the end date must be equal to or after the start date. If you enter an end date that is before the start date, you'll receive an error message prompting you to correct the dates. This ensures logical and meaningful results.
-            </p>
-          </section>
+      <!-- All Tools View -->
+      <section id="view-tools" class="view view-hidden">
+        <main>
+          <div class="page-header">
+            <h1>All Tools</h1>
+            <p class="page-description">Browse our complete collection of free online calculators organized by category.</p>
+          </div>
+          <div class="tools-section">
+            <div id="tools-grid-container" class="tools-grid">
+              <!-- Tools will be dynamically rendered here -->
+            </div>
+          </div>
         </main>
       </section>
 
@@ -1394,3 +1282,4 @@
     <script type="module" src="/src/main.ts"></script>
   </body>
 </html>
+
