add AdSense code snippet

--- a/index.html
+++ b/index.html
@@ -5,8 +5,9 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Calculate your age and date differences easily with our free online calculators. Find out your exact age in years, months, and days, or calculate the difference between any two dates." />
-    <!-- AdSense Meta Tag - Replace with your actual publisher ID after approval -->
-    <!-- <meta name="google-adsense-account" content="ca-pub-XXXXXXXXXXXXXXX"> -->
+    <!-- Google AdSense -->
+    <meta name="google-adsense-account" content="ca-pub-1375559951407210">
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1375559951407210" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
